--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "test:watch": "yarn test --watch"
   },
   "lint-staged": {
-    "src/**/*": ["yarn lint --fix"]
+    "src/**/*": [
+      "yarn lint --fix", "yarn test --findRelatedTests --bail"
+    ]
   },
   "dependencies": {
     "next": "11.1.2",
@@ -18,6 +22,10 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
@@ -29,6 +37,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.0",
+    "jest": "^27.3.1",
     "lint-staged": "^11.2.3",
     "prettier": "2.4.1",
     "typescript": "^4.4.4"
