--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint src --max-warnings=0",
     "prepare": "husky install",
     "test": "jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "storybook": "start-storybook -s ./public -p 6006",
+    "build-storybook": "build-storybook"
   },
   "lint-staged": {
     "src/**/*": [
@@ -19,12 +21,16 @@
   },
   "dependencies": {
     "next": "11.1.2",
+    "next-pwa": "^5.4.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@babel/preset-typescript": "^7.15.0",
+    "@storybook/addon-essentials": "^6.4.0",
+    "@storybook/react": "^6.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
@@ -33,6 +39,7 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
+    "babel-loader": "^8.2.3",
     "babel-plugin-styled-components": "^1.13.3",
     "eslint": "^8.0.1",
     "eslint-config-next": "11.1.2",
@@ -40,8 +47,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-storybook": "^0.5.0",
     "husky": "^7.0.0",
     "jest": "^27.3.1",
+    "jest-styled-components": "^7.0.8",
     "lint-staged": "^11.2.3",
     "prettier": "2.4.1",
     "typescript": "^4.4.4"
